--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
   <section id="about">
     <h2>Tentang Saya</h2>
-    <p>Lulusan S1 Teknik Informatika, minat di IT Support, cepat belajar, siap bekerja sama dan mendukung operasional IT.</p>
+    <p>Lulusan S1 Program Studi Teknik Informatika dengan minat di bidang IT Support. 
+      Terampil dalam pemahaman dasar Networking, Operating System, Hardware & Software Computer, Troubleshooting, Microsoft Office, Data Entry. 
+      Cepat belajar, mampu bekerja sama dalam tim, dan siap mendukung kelancaran operasional IT perusahaan.</p>
   </section>
 
   <section id="skills">
@@ -172,3 +174,4 @@
   </script>
 </body>
 </html>
+
