--- a/index.html
+++ b/index.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 🔹 Ubah agar responsif -->
+  <title>Portfolio - Agung Yuda Prayogo</title>
+  <link rel="stylesheet" href="style.css">
+
+  <!-- 🔒 Tambahan CSS anti klik kanan / long press -->
+  <style>
+    body {
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      -webkit-touch-callout: none; /* blok long press save image di iOS */
+    }
+    img, a {
+      -webkit-touch-callout: none;
+      pointer-events: auto;
+    }
+  </style>
+</head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=900">
   <title>Portfolio - Agung Yuda Prayogo</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
+  <!-- 🔒 Script proteksi tambahan -->
+  <script>
+  // Matikan klik kanan, copy, inspect, save as
+  document.addEventListener('contextmenu', e => e.preventDefault());
+  document.addEventListener('selectstart', e => e.preventDefault());
+  document.addEventListener('copy', e => e.preventDefault());
+
+  document.addEventListener('keydown', e => {
+    if ((e.ctrlKey || e.metaKey) && ['s','u','p'].includes(e.key.toLowerCase())) e.preventDefault(); // Ctrl+S, Ctrl+U, Ctrl+P
+    if (e.key === 'F12') e.preventDefault(); // F12 DevTools
+    if (e.ctrlKey && e.shiftKey && e.key.toLowerCase() === 'i') e.preventDefault(); // Ctrl+Shift+I
+  });
+
+  // Cegah long-press (mobile)
+  let touchTimer;
+  document.addEventListener('touchstart', () => {
+    touchTimer = setTimeout(()=>{}, 700);
+  }, {passive:true});
+  document.addEventListener('touchend', () => clearTimeout(touchTimer));
+  </script>
 
 <body>
   <header>
@@ -23,9 +67,9 @@
 
   <section id="about">
     <h2>Tentang Saya</h2>
-    <p>Lulusan S1 Program Studi Teknik Informatika dengan minat di bidang IT Support.
-      Terampil dalam pemahaman dasar Networking, Operating System, Hardware & Software Computer, Troubleshooting, Microsoft Office, Data Entry.
-      Cepat belajar, mampu bekerja sama dalam tim, dan siap mendukung kelancaran operasional IT perusahaan.</p>
+    <p>Lulusan S1 Program Studi Teknik Informatika dengan minat di bidang IT Support. 
+    Terampil dalam pemahaman dasar Networking, Operating System, Hardware & Software Computer, Troubleshooting, Microsoft Office, Data Entry. 
+    Cepat belajar, mampu bekerja sama dalam tim, dan siap mendukung kelancaran operasional IT perusahaan.</p>
   </section>
 
   <section id="skills">
@@ -174,5 +218,3 @@
   </script>
 </body>
 </html>
-
-
